--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 .banner {
-    position: revert;
+    position: absolute;
+    top: 0;
     width: 100%;
     height: 100vh;
     background: url("../resources/images/backgrounds/beach-bg.png");
@@ -10,14 +11,30 @@
     width: 100%;
     height: 100%;
 }
+.navbar-container {
+    z-index: 1000;
+}
+.navbar-container.scrolled {
+    background: url("../resources/images/backgrounds/beach-bg.png") no-repeat 0 calc(-100vh + 70px);
+}
 .navbar {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-    padding-top: 15px;
-    z-index: 1000;
 }
 .navbar * {
     color: #fff;
     font-weight: bold;
+}
+.navbar .navbar-brand {
+    font-size: 27px;
+}
+.navbar .navbar-brand:hover {
+    color: white;
+}
+.navbar .navbar-collapse {
+    padding-left: 30px;
+}
+.navbar .navbar-collapse .nav-item:hover .nav-link {
+    color: black;
 }
 .banner .btn {
     color: #fff;
