--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,9 @@
-.banner {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    background: url("../resources/images/backgrounds/beach-bg.png");
+:root {
+    --nav-height: 70px;
 }
-.banner .coco {
-    background: url("../resources/images/backgrounds/beach-coco.png") transparent no-repeat;
-    position: absolute;
-    width: 100%;
-    height: 100%;
+body {
+    padding-top: calc(100vh + 15px);
+    background-color: whitesmoke;
 }
 .navbar-container {
     z-index: 1000;
@@ -19,6 +13,7 @@
 }
 .navbar {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    min-height: var(--nav-height);
 }
 .navbar * {
     color: #fff;
@@ -36,17 +31,26 @@
 .navbar .navbar-collapse .nav-item:hover .nav-link {
     color: black;
 }
+.banner {
+    height: 100vh;
+    background: url("../resources/images/backgrounds/beach-bg.png");
+}
+.banner .coco {
+    background: url("../resources/images/backgrounds/beach-coco.png") transparent no-repeat;
+}
+
 .banner .btn {
     color: #fff;
     font-size: 2rem;
     font-weight: bold;
     border: 1px solid rgba(255, 255, 255, 0.3);
     transition: 0.5s;
+    border-radius: 15px;
 
 }
 .banner .btn:hover {
     background: rgba(0, 0, 0, 0.5);
 }
 .click-me {
-    margin-top: 200px;
+    margin-top: 400px;
 }
