--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ body.padding {
 }
 .navbar * {
     color: #fff;
-    font-weight: bold;
+    /*font-weight: bold;*/
 }
 .navbar .navbar-brand {
     font-size: 27px;
@@ -53,7 +53,7 @@ body.padding {
 .banner-container .banner .btn {
     color: #fff;
     font-size: 2rem;
-    font-weight: bold;
+    /*font-weight: bold;*/
     border: 1px solid rgba(255, 255, 255, 0.3);
     transition: 0.5s;
     border-radius: 15px;
