--- a/css/index.scss
+++ b/css/index.scss
@@ -49,9 +49,10 @@ body.padding {
     }
     .banner {
         height: 100vh;
-        background: url("../resources/images/backgrounds/beach-bg.png");
+        background: url("../resources/images/backgrounds/beach-bg.png") fixed;
+
         .coco {
-            background: url("../resources/images/backgrounds/beach-coco.png") transparent no-repeat;
+            background: transparent url("../resources/images/backgrounds/beach-coco.png") no-repeat fixed;
         }
         .container {
             display: flex;
