--- a/css/index.scss
+++ b/css/index.scss
@@ -50,9 +50,10 @@ body.padding {
     .banner {
         height: 100vh;
         background: url("../resources/images/backgrounds/beach-bg.png") fixed;
-
+        background-size: cover;
         .coco {
             background: transparent url("../resources/images/backgrounds/beach-coco.png") no-repeat fixed;
+            background-size: contain;
         }
         .container {
             display: flex;
