--- a/css/index.css
+++ b/css/index.css
@@ -49,12 +49,12 @@ body.padding {
 }
 .banner-container .banner {
   height: 100vh;
-  background: url("../resources/images/backgrounds/beach-bg.png") fixed;
+  background: url("../resources/images/backgrounds/compress/beach-bg_vectorized.png") fixed;
   background-size: cover;
 }
 .banner-container .banner .coco {
-  background: transparent url("../resources/images/backgrounds/beach-coco.png") no-repeat fixed;
   background-size: contain;
+  background: rgba(0, 181, 255, 0.4) url("../resources/images/backgrounds/compress/beach-coco_vectorized.png") no-repeat fixed;
 }
 .banner-container .banner .container {
   display: flex;
