--- a/css/index.css
+++ b/css/index.css
@@ -7,8 +7,22 @@ body {
   padding-top: var(--nav-height);
 }
 
+body.loading {
+  overflow: hidden;
+}
+
 body.padding {
   padding-top: 100vh;
+}
+
+.loader-backdrop {
+  background-color: #222;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1001;
 }
 
 .navbar-container {
@@ -48,7 +62,7 @@ body.padding {
 }
 .banner-container .banner {
   height: 100vh;
-  background: url("../resources/images/backgrounds/beach-bg.png") fixed;
+  background: url("../resources/images/backgrounds/beach-bg.jpg") fixed;
   background-size: cover;
 }
 .banner-container .banner .coco {
@@ -104,6 +118,10 @@ body.padding {
 }
 .banner-container .banner .container .click-me:hover {
   background: rgba(0, 0, 0, 0.5);
+}
+.banner-container .banner canvas {
+  width: 100%;
+  height: 100vh;
 }
 
 .card .project-thumb {
