--- a/css/index.scss
+++ b/css/index.scss
@@ -5,9 +5,23 @@ body {
     background-color: whitesmoke;
     padding-top: var(--nav-height);
 }
+body.loading {
+    overflow: hidden;
+}
 body.padding {
     padding-top: 100vh;
 }
+
+.loader-backdrop {
+    background-color: #222;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1001;
+}
+
 .navbar-container {
     z-index: 1000;
 }
@@ -49,7 +63,7 @@ body.padding {
     }
     .banner {
         height: 100vh;
-        background: url("../resources/images/backgrounds/beach-bg.png") fixed;
+        background: url("../resources/images/backgrounds/beach-bg.jpg") fixed;
         //background: url("../resources/images/backgrounds/compress/beach-bg_vectorized.png") fixed;
         background-size: cover;
         .coco {
@@ -106,6 +120,10 @@ body.padding {
                     background: rgba(0, 0, 0, 0.5);
                 }
             }
+        }
+        canvas {
+            width: 100%;
+            height: 100vh;
         }
     }
 }
