--- a/css/loader.scss
+++ b/css/loader.scss
@@ -91,7 +91,19 @@ body{
   height:100vh;
   background:#222;
 }
+body.loading {
+  overflow: hidden;
+}
 
+.loader-backdrop {
+  background-color: #222;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1001;
+}
 .load-holder{
   @include centre();
   width:240px;
@@ -179,15 +191,9 @@ body{
   }
 }
 
-#particleCanvas-White{
+#particles-js {
   @include centre();
   width:100%;
-  height:50%;
-  opacity:0.1;
-}
-
-#particleCanvas-Blue{
-  @include centre();
-  width:300px;
-  height:300px;
+  height:100%;
+  opacity:0.7;
 }
