--- a/css/common.scss
+++ b/css/common.scss
@@ -23,19 +23,21 @@ html, body {
     padding: 0;
     margin: 0;
     font-family: "Roboto Light", serif;
-    /*scroll-behavior: smooth;*/
 }
-::-webkit-scrollbar {
+body {
+    //overflow: hidden;
+}
+.body::-webkit-scrollbar {
     width: 5px;
     height: 5px;
     background-color: transparent;
 }
-::-webkit-scrollbar-track {
+.body::-webkit-scrollbar-track {
     /*background-color: #aaa;*/
     box-shadow: inset 0 0 5px 5px #aaa;
     /*border: solid 3px transparent;*/
 }
-::-webkit-scrollbar-thumb {
+.body::-webkit-scrollbar-thumb {
     /*background-color: #343a40;*/
     box-shadow: inset 0 0 5px 5px black;
     /*border: solid 3px transparent;*/
