--- a/css/index.scss
+++ b/css/index.scss
@@ -1,11 +1,21 @@
+@import "../assets/bootstrap-5.0.2/scss/functions";
+@import "../assets/bootstrap-5.0.2/scss/variables";
+@import "../assets/bootstrap-5.0.2/scss/mixins/breakpoints";
+
 :root {
     --nav-height: 70px;
 }
-body {
+.body {
     background-color: whitesmoke;
     padding-top: var(--nav-height);
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
 }
-body.padding {
+.padding {
     padding-top: 100vh;
 }
 
@@ -14,7 +24,7 @@ body.padding {
 }
 .navbar {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-    min-height: var(--nav-height);
+    padding: 14.5px 0;
     * {
         color: #fff;
     }
@@ -39,7 +49,7 @@ body.padding {
     }
 }
 
-.banner-container {
+.banner-container {;
     &.hide {
         .banner {
             height: var(--nav-height);
@@ -51,13 +61,15 @@ body.padding {
     }
     .banner {
         height: 100vh;
-        background: url("../resources/images/backgrounds/beach-bg.jpg") fixed;
         //background: url("../resources/images/backgrounds/compress/beach-bg_vectorized.png") fixed;
+        background: url("../resources/images/backgrounds/beach-bg.jpg") fixed;
         background-size: cover;
+        z-index: 1;
         .coco {
-            background: transparent url("../resources/images/backgrounds/beach-coco.png") no-repeat fixed;
+            height: 100vh;
             //background: rgb(0 181 255 / 40%) url("../resources/images/backgrounds/compress/beach-coco_vectorized.png") no-repeat fixed;
-            background-size: contain;
+            background: transparent url("../resources/images/backgrounds/beach-coco.png") no-repeat fixed;
+            background-size: cover;
         }
         .container {
             display: flex;
@@ -80,18 +92,6 @@ body.padding {
             .greeting {
                 margin-top: 10px;
                 margin-bottom: 20px;
-                .s1 {
-                    font-size: 50px;
-                    line-height: 50px;
-                }
-                .s2 {
-                    font-size: 40px;
-                    line-height: 40px;
-                }
-                .s3 {
-                    font-size: 30px;
-                    line-height: 30px;
-                }
                 > * {
                     display: inline-block;
                     color: #ffffff;
@@ -110,14 +110,105 @@ body.padding {
             }
         }
         canvas {
-            width: 100%;
-            height: 100vh;
+            //width: 100%;
+            //height: 100vh;
         }
     }
+}
+
+#content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
 }
 
 .card {
     .project-thumb {
         padding: 50px;
+    }
+}
+
+@include media-breakpoint-down(sm) {
+    .navbar .navbar-brand {
+        margin-right: 0;
+        font-size: 20px;
+    }
+    .banner-container .banner .container .greeting {
+        .s1 {
+            font-size: 40px;
+            line-height: 40px;
+        }
+        .s2 {
+            font-size: 20px;
+            line-height: 20px;
+        }
+        .s3 {
+            font-size: 15px;
+            line-height: 15px;
+        }
+    }
+    .anchor {
+        height: 70px;
+    }
+}
+@include media-breakpoint-up(sm) {
+    .banner .greeting {
+        .s1 {
+            font-size: 50px;
+            line-height: 50px;
+        }
+        .s2 {
+            font-size: 40px;
+            line-height: 40px;
+        }
+        .s3 {
+            font-size: 25px;
+            line-height: 25px;
+        }
+    }
+    .anchor {
+        height: 72px;
+    }
+}
+@include media-breakpoint-up(md) {
+    .banner .container .greeting {
+        .s1 {
+            font-size: 50px;
+            line-height: 50px;
+        }
+        .s2 {
+            font-size: 40px;
+            line-height: 40px;
+        }
+        .s3 {
+            font-size: 30px;
+            line-height: 30px;
+        }
+    }
+    .anchor {
+        height: 87px;
+    }
+}
+@include media-breakpoint-up(lg) {
+    .navbar .navbar-brand {
+        font-size: 35px;
+    }
+    .navbar .navbar-collapse  .nav-link {
+        font-size: 25px;
+    }
+    .greeting {
+        .s1 {
+            font-size: 60px;
+            line-height: 60px;
+        }
+        .s2 {
+            font-size: 50px;
+            line-height: 50px;
+        }
+        .s3 {
+            font-size: 40px;
+            line-height: 40px;
+        }
     }
 }
