--- a/css/loader.css
+++ b/css/loader.css
@@ -94,10 +94,6 @@
     color: #3BB2D0;
   }
 }
-body.loading {
-  overflow: hidden;
-}
-
 .loader-backdrop {
   background-color: #222;
   position: fixed;
@@ -122,6 +118,7 @@ body.loading {
   border: 5px solid #1B5F70;
   border-radius: 120px;
   box-sizing: border-box;
+  left: calc(50% + 5px);
 }
 .load-holder:after {
   position: absolute;
@@ -207,7 +204,7 @@ body.loading {
   width: 140px;
   height: 140px;
   text-align: center;
-  font-size: 62.5%;
+  font-size: 100%;
   font-family: "Open Sans", sans-serif;
   border: 5px solid #3bb2d0;
   border-radius: 70px;
