--- a/css/common.css
+++ b/css/common.css
@@ -75,6 +75,16 @@ html, body {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
+.card-title {
+  font-weight: bold;
+}
+
+.btn-dark {
+  background-color: #212529 !important;
+  border-color: #212529 !important;
+  color: white;
+}
+
 .btn-orange {
   background-color: #FF6100;
   color: white;
