--- a/css/common.css
+++ b/css/common.css
@@ -113,6 +113,7 @@ html, body {
   justify-content: center;
 }
 .contact-card {
+  background-color: white;
   padding: 16px;
   display: block;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2) !important;
