--- a/css/common.scss
+++ b/css/common.scss
@@ -109,6 +109,7 @@ body {
     }
 }
 .contact-card {
+    background-color: white;
     padding: 16px;
     display: block;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2) !important;
