--- a/css/index.scss
+++ b/css/index.scss
@@ -125,7 +125,10 @@
 
 .card {
     .project-thumb {
-        padding: 50px;
+        padding: 50px 50px 25px;
+    }
+    .card-body {
+        padding: 0 50px 50px;
     }
 }
 
