--- a/css/index.scss
+++ b/css/index.scss
@@ -130,6 +130,12 @@
     .card-body {
         padding: 0 50px 50px;
     }
+    &.details {
+        .card-body {
+            padding: 50px;
+        }
+        margin-bottom: 5px;
+    }
 }
 
 .text-responsive {
@@ -180,6 +186,19 @@
     .about-icon {
         width: 75px;
         height: 75px;
+    }
+    .card {
+        .project-thumb {
+            padding: 25px 25px 15px;
+        }
+        .card-body {
+            padding: 0 25px 25px;
+        }
+        &.details {
+            .card-body {
+                padding: 25px;
+            }
+        }
     }
 }
 
