Update CGE project tools

--- a/css/common.css
+++ b/css/common.css
@@ -133,4 +133,8 @@ html, body {
   margin-bottom: 0;
 }
 
+.bg-darker-white {
+  background-color: #bdbdbd;
+}
+
 /*# sourceMappingURL=common.css.map */
