Added CK Electronics project

--- a/css/common.css
+++ b/css/common.css
@@ -85,6 +85,13 @@ html, body {
   color: white;
 }
 
+.btn-yellow {
+  background-color: #ffbf02 !important;
+  border-color: #ffbf02 !important;
+  color: black;
+  font-weight: bold;
+}
+
 .btn-orange {
   background-color: #FF6100;
   color: white;
