--- a/css/common.scss
+++ b/css/common.scss
@@ -81,6 +81,12 @@ body {
     border-color: #212529 !important;
     color: white;
 }
+.btn-yellow {
+    background-color: #ffbf02 !important;
+    border-color: #ffbf02 !important;
+    color: black;
+    font-weight: bold;
+}
 .btn-orange {
     background-color: #FF6100;
     color: white;
