--- a/css/common.css
+++ b/css/common.css
@@ -2,10 +2,12 @@
   font-family: "Roboto Light";
   src: url(../resources/fonts/roboto/Roboto-Light.ttf);
 }
+
 @font-face {
   font-family: "Roboto Regular";
   src: url(../resources/fonts/roboto/Roboto-Regular.ttf);
 }
+
 @font-face {
   font-family: "Otomanopee One";
   font-style: normal;
@@ -13,6 +15,7 @@
   font-display: swap;
   src: url(../resources/fonts/OtomanopeeOne-Regular.ttf);
 }
+
 @font-face {
   font-family: "Fredoka One";
   font-style: normal;
@@ -20,6 +23,7 @@
   font-display: swap;
   src: url(../resources/fonts/FredokaOne-Regular.ttf);
 }
+
 * {
   box-sizing: border-box !important;
 }
@@ -63,12 +67,9 @@ html, body {
   background-color: rgba(0, 0, 0, 0.3);
   overflow: hidden;
 }
+
 .glass.bordered {
   border: 1px solid rgba(255, 255, 255, 0.3);
-}
-.glass * {
-  backdrop-filter: blur(0) !important;
-  z-index: 1;
 }
 
 .navbar-toggler-icon {
@@ -77,6 +78,17 @@ html, body {
 
 .card-title {
   font-weight: bold;
+}
+
+.btn-github {
+  background-color: #171515 !important;
+  border-color: #171515 !important;
+  color: white;
+}
+
+.btn-github:hover {
+  background-color: #171515;
+  color: white;
 }
 
 .btn-dark {
@@ -92,6 +104,18 @@ html, body {
   font-weight: bold;
 }
 
+.btn-coco {
+  background-color: #587409 !important;
+  border-color: #587409 !important;
+  color: white;
+  font-weight: bold;
+}
+
+.btn-coco:hover {
+  background-color: #587409 !important;
+  color: white;
+}
+
 .btn-orange {
   background-color: #FF6100;
   color: white;
@@ -99,6 +123,17 @@ html, body {
 
 .btn-orange:hover {
   background-color: #d24c01;
+  color: white;
+}
+
+.btn-sleek-blue {
+  background-color: #1f4e79;
+  border-color: #1f4e79;
+  color: white;
+}
+
+.btn-sleek-blue:hover {
+  background-color: #1f4e79;
   color: white;
 }
 
@@ -119,6 +154,7 @@ html, body {
   align-items: center;
   justify-content: center;
 }
+
 .contact-card {
   background-color: white;
   padding: 16px;
@@ -135,6 +171,7 @@ html, body {
   text-align: center;
   white-space: nowrap;
 }
+
 .contact-card .content p {
   font-size: 14px;
   margin-bottom: 0;
@@ -142,6 +179,16 @@ html, body {
 
 .bg-darker-white {
   background-color: #bdbdbd;
+}
+
+.img-logo {
+  width: 30px;
+  height: auto;
+}
+
+.img-logo-sm {
+  width: 20px;
+  height: auto;
 }
 
 /*# sourceMappingURL=common.css.map */
