--- a/css/index.scss
+++ b/css/index.scss
@@ -282,3 +282,9 @@
 .banner-container, .padding {
     //display: none;
 }
+
+// Pop-up
+.custom-jconfirm-buttons {
+    display: flex !important;
+    gap: 15px;
+}
