--- a/css/common.css
+++ b/css/common.css
@@ -100,7 +100,7 @@ html, body {
 .btn-yellow {
   background-color: #ffbf02 !important;
   border-color: #ffbf02 !important;
-  color: black;
+  color: white;
   font-weight: bold;
 }
 
