--- a/css/index.scss
+++ b/css/index.scss
@@ -155,6 +155,9 @@
             display: block;
             margin: auto;
         }
+        h4 {
+            font-size: 1.5em;
+        }
     }
 }
 
