--- a/css/common.css
+++ b/css/common.css
@@ -143,6 +143,17 @@ html, body {
   color: white;
 }
 
+.btn-blue {
+  background-color: #000373;
+  border-color: #000373;
+  color: white;
+}
+.btn-blue:hover {
+  background-color: #000256;
+  border-color: #000256;
+  color: white;
+}
+
 .gallery img {
   display: block;
   margin: auto auto 40px;
